fix(ui): fix minor spacing issues from Vanilla 3 update
This branch fixes spacing in section headers, tables with checkboxes, and KVM resource meters.

--- a/ui/src/scss/_utilities.scss
+++ b/ui/src/scss/_utilities.scss
@@ -48,6 +48,11 @@
     display: flex;
   }
 
+  .u-flex--align-center {
+    align-items: center;
+    display: flex;
+  }
+
   .u-flex--grow {
     flex-grow: 1;
   }
